--- a/common-library/pom.xml
+++ b/common-library/pom.xml
@@ -19,6 +19,7 @@
         <sonar.organization>nashtech-garage</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.projectKey>nashtech-garage_yas-common-library</sonar.projectKey>
+        <kafka-it.version>1.19.7</kafka-it.version>
     </properties>
     <dependencies>
         <dependency>
@@ -42,6 +43,13 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
+        </dependency>
+
+        <!-- Test -->
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>kafka</artifactId>
+            <version>${kafka-it.version}</version>
         </dependency>
     </dependencies>
 
