--- a/docker-compose-debug.yml
+++ b/docker-compose-debug.yml
@@ -12,8 +12,12 @@ services:
     networks:
       - yas-network
   identity:
-    image: quay.io/keycloak/keycloak:21.0.2
-    command: [ 'start-dev --import-realm' ]
+    image: ibakuman/java-debugger
+    container_name: debug-kc
+    working_dir: /app
+    command: [ "sh", "-c", "chmod +x ./bin/kc.sh && ./bin/kc.sh start-dev --import-realm" ]
+    # command: [ "./bin/kc.sh","start-dev", "import", "--file", "data/import/realm-export.json" ]
+    # command: [ "ls", "-l" ]
     environment:
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
@@ -24,8 +28,9 @@ services:
       KC_DB_PASSWORD: admin
       KC_HTTP_PORT: 80
     volumes:
-      - ./identity/realm-export.json:/opt/keycloak/data/import/realm-export.json
-      - ./identity/themes/yas/theme:/opt/keycloak/themes
+      - ../keycloak/debugger/app:/app
+      - ./identity/realm-export.json:/app/data/import/realm-export.json
+      - ./identity/themes/yas/theme:/app/themes
     networks:
       - yas-network
   backoffice:
@@ -33,6 +38,8 @@ services:
     image: ibakuman/java-debugger
     entrypoint: [ "./wait-for-it.sh", "identity:80", "--timeout=300", "--", "java", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005", "-jar", "/app.jar" ]
     environment:
+      - DEBUG=true
+      - DEBUG_PORT=5006
       - SPRING_PROFILES_ACTIVE=prod
       - SERVER_PORT
       - LOGGING_CONFIG
@@ -51,6 +58,7 @@ services:
       - OTEL_JAVAAGENT_DEBUG
     ports:
       - "15005:5005"
+      - "15006:5006"
     volumes:
       - ./backoffice-bff/target/backoffice-bff-1.0-SNAPSHOT.jar:/app.jar
       - ./docker/libs/opentelemetry-javaagent.jar:/opentelemetry-javaagent.jar
