--- a/docker-compose-debug.yml
+++ b/docker-compose-debug.yml
@@ -19,6 +19,8 @@ services:
     # command: [ "./bin/kc.sh","start-dev", "import", "--file", "data/import/realm-export.json" ]
     # command: [ "ls", "-l" ]
     environment:
+      DEBUG: true
+      DEBUG_PORT: 5006
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
       KC_PROXY: passthrough
@@ -27,6 +29,8 @@ services:
       KC_DB_USERNAME: admin
       KC_DB_PASSWORD: admin
       KC_HTTP_PORT: 80
+    ports:
+      - "15006:5006"
     volumes:
       - ../keycloak/debugger/app:/app
       - ./identity/realm-export.json:/app/data/import/realm-export.json
@@ -38,8 +42,6 @@ services:
     image: ibakuman/java-debugger
     entrypoint: [ "./wait-for-it.sh", "identity:80", "--timeout=300", "--", "java", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005", "-jar", "/app.jar" ]
     environment:
-      - DEBUG=true
-      - DEBUG_PORT=5006
       - SPRING_PROFILES_ACTIVE=prod
       - SERVER_PORT
       - LOGGING_CONFIG
@@ -58,7 +60,6 @@ services:
       - OTEL_JAVAAGENT_DEBUG
     ports:
       - "15005:5005"
-      - "15006:5006"
     volumes:
       - ./backoffice-bff/target/backoffice-bff-1.0-SNAPSHOT.jar:/app.jar
       - ./docker/libs/opentelemetry-javaagent.jar:/opentelemetry-javaagent.jar
